--- a/static/src/css/web_widget_image_webcam.css
+++ b/static/src/css/web_widget_image_webcam.css
@@ -30,3 +30,14 @@
 .direction_icon {
     text-align: center;
 }
+
+.o_hr_attendance_kiosk_mode .o_form_binary_file_web_cam {
+    cursor: pointer;
+    margin: 0.1em 0 0.1em;
+    padding: 0.15em 0.3em;
+    border-radius: 0.1em;
+}
+
+.o_hr_attendance_kiosk_mode .o_form_binary_file_web_cam:hover {
+    color: #00A09D;
+}
