Majoration Nuit et Majoration Férié

--- a/views/work_entry_type.xml
+++ b/views/work_entry_type.xml
@@ -10,6 +10,7 @@
             <group string="Majoration">
               <field name="sunday_maj"/>
               <field name="holiday_maj"/>
+              <field name="night_maj"/>
             </group>
           </group>
         </xpath>  
